--- a/presentationlayer/pom.xml
+++ b/presentationlayer/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>zero-project</artifactId>
-        <groupId>zero-project</groupId>
+        <groupId>com.iesemilidarder.zeroproject</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -24,7 +24,9 @@
 
         <dependency>
             <groupId>com.iesemilidarder.zeroproject</groupId>
-            <artifactId></artifactId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+
         </dependency>
 
 
