--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.iesemilidarder.zeroproject</groupId>
     <artifactId>zero-project</artifactId>
-   <!--No genera ni war ni jar-->
+    <!--No genera ni war ni jar-->
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
@@ -15,5 +15,12 @@
         <module>restapi</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>12.2.0.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
